fix: wrapped dts and dds in <dl> for proper definition list structure

--- a/src/components/general-info-list/general-info-list.module.scss
+++ b/src/components/general-info-list/general-info-list.module.scss
@@ -4,10 +4,8 @@
 .root {
   display: flex;
   flex-direction: column;
-  padding: 0;
   margin: 0;
   gap: 60px;
-  list-style: none;
 }
 
 .item {
